--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,38 +1,39 @@
+<div class="container home-section d-flex flex-row justify-content-center align-items-center">
+  <div class="images-section pt-3 d-none d-lg-block"></div>
+  <div class="login-section pt-3">
 
-<nav class="navbar navbar-expand-lg bg-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled">Disabled</a>
-        </li>
-      </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
+    <div class="card text-center pt-5" style="width: 23rem;">
+      <%= image_tag 'logo.png', class: "card-img-top" %>
+      <div class="card-body">
+        <div class="mb-3 mt-4">
+          <input type="email" class="form-control" id="email" placeholder="Phone number, username, or email">
+        </div>
+        <div class="mb-3">
+          <input type="password" class="form-control" id="password" placeholder="Password">
+        </div>
+        <a href="#" class="btn btn-primary d-block">Log In</a>
+
+        <div class="d-flex align-items-center mt-4">
+          <div class="line"></div>
+          <h2 class="line-text">Or</h2>
+          <div class="line"></div>
+        </div>
+
+
+        <a href="#" class="d-block mt-4 text-decoration-none fw-bold">
+          <%= image_tag("facebook.png", class: "facebook") %>
+          Log in with Facebook
+        </a>
+
+        <a href="#" class="fs-6 d-block my-4 text-decoration-none">Forgotten password?</a>
+      </div>
+    </div>
+
+    <div class="card text-center py-2 mt-3" style="width: 23rem;">
+      <div class="card-text">
+        Don't have an account?
+        <a href="#" class="fs-6 my-4 text-decoration-none">Sign up</a>
+      </div>
     </div>
   </div>
-</nav>
-<h1>Railsgram</h1>
+</div>
