--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -19,12 +19,16 @@
           <div class="line"></div>
         </div>
 
-
         <a href="#" class="d-block mt-4 text-decoration-none fw-bold">
           <%= image_tag("facebook.png", class: "facebook") %>
           Log in with Facebook
         </a>
 
+        <% if notice %>
+          <p class="notice"><%= notice %></p>
+        <% elsif alert %>
+          <p class="alert"><%= alert %></p>
+        <% end %>
         <a href="#" class="fs-6 d-block my-4 text-decoration-none">Forgotten password?</a>
       </div>
     </div>
