--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,43 +1,13 @@
-<div class="container home-section d-flex flex-row justify-content-center align-items-center">
-  <div class="images-section pt-3 d-none d-lg-block"></div>
-  <div class="login-section pt-3">
+<div class="container home-section d-flex justify-content-center align-items-center">
+  <h1>Homepage</h1>
+</div>
+<div class="container d-flex justify-content-center align-items-center">
+  <p>
+  <% if current_user %>
+    <%= button_to "Sign Out", destroy_user_session_path, method: :delete, class: "btn btn-primary" %>
+  <% else %>
+    <%= link_to "Sign in", new_user_session_path, class: "btn btn-primary" %>
+  <% end %>
 
-    <div class="card text-center pt-5" style="width: 23rem;">
-      <%= image_tag 'logo.png', class: "card-img-top" %>
-      <div class="card-body">
-        <div class="mb-3 mt-4">
-          <input type="email" class="form-control" id="email" placeholder="Phone number, username, or email">
-        </div>
-        <div class="mb-3">
-          <input type="password" class="form-control" id="password" placeholder="Password">
-        </div>
-        <a href="#" class="btn btn-primary d-block">Log In</a>
-
-        <div class="d-flex align-items-center mt-4">
-          <div class="line"></div>
-          <h2 class="line-text">Or</h2>
-          <div class="line"></div>
-        </div>
-
-        <a href="#" class="d-block mt-4 text-decoration-none fw-bold">
-          <%= image_tag("facebook.png", class: "facebook") %>
-          Log in with Facebook
-        </a>
-
-        <% if notice %>
-          <p class="notice"><%= notice %></p>
-        <% elsif alert %>
-          <p class="alert"><%= alert %></p>
-        <% end %>
-        <a href="#" class="fs-6 d-block my-4 text-decoration-none">Forgotten password?</a>
-      </div>
-    </div>
-
-    <div class="card text-center py-2 mt-3" style="width: 23rem;">
-      <div class="card-text">
-        Don't have an account?
-        <a href="#" class="fs-6 my-4 text-decoration-none">Sign up</a>
-      </div>
-    </div>
-  </div>
+  </p>
 </div>
