--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,41 @@
-<h2>Sign up</h2>
+<div class="container home-section d-flex flex-row justify-content-center align-items-center">
+  <div class="login-section pt-3">
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+    <div class="card text-center pt-5">
+      <%= image_tag 'logo.png', class: "card-img-top" %>
+      <div class="card-body">
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+          <%= render "devise/shared/error_messages", resource: resource %>
+          <div class="mb-3 mt-4">
+            <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control", placeholder: "Phone number or email" %>
+          </div>
+          <div class="mb-3 mt-4">
+            <%= f.text_field :full_name, autofocus: true, autocomplete: "full_name", class: "form-control", placeholder: "Full name" %>
+          </div>
+          <div class="mb-3 mt-4">
+            <%= f.text_field :username, autofocus: true, autocomplete: "username", class: "form-control", placeholder: "Username" %>
+          </div>
+          <div class="mb-3">
+            <%= f.password_field :password, autocomplete: "new-password", class: "form-control", placeholder: "Password" %>
+          </div>
+          <div class="mb-3">
+            <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control", placeholder: "Confirm password" %>
+          </div>
+          <%= f.button "Sign Up", class: "btn btn-primary d-block w-100" %>
+        <% end %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+        <% if notice %>
+          <p class="notice"><%= notice %></p>
+        <% elsif alert %>
+          <p class="alert"><%= alert %></p>
+        <% end %>
+      </div>
+    </div>
+
+    <div class="card text-center py-2 mt-3">
+      <div class="card-text">
+        <%= link_to "Forgotten password?", new_user_password_path, class: "fs-6 my-4 text-decoration-none" %>
+      </div>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
