--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,36 @@
-<h2>Forgot your password?</h2>
+<div class="container home-section d-flex flex-row justify-content-center align-items-center">
+  <div class="login-section pt-3">
+    <div class="card text-center pt-5">
+      <%= image_tag 'logo.png', class: "card-img-top" %>
+      <div class="card-body">
+        <p>Forgot your password?</p>
+        <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+          <%= render "devise/shared/error_messages", resource: resource %>
+          <div class="mb-3 mt-4">
+            <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control", placeholder: "Phone number or email" %>
+          </div>
+          <%= f.button "Reset", class: "btn btn-primary d-block w-100" %>
+        <% end %>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+        <% if notice %>
+          <p class="notice"><%= notice %></p>
+        <% elsif alert %>
+          <p class="alert"><%= alert %></p>
+        <% end %>
+      </div>
+    </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <div class="card text-center py-2 mt-3">
+      <div class="card-text">
+        <%= link_to "Sign in", new_user_session_path, class: "fs-6 my-4 text-decoration-none" %>
+      </div>
+    </div>
+
+    <div class="card text-center py-2 mt-3">
+      <div class="card-text">
+        Don't have an account?
+        <%= link_to "Sign up", new_user_registration_path, class: "fs-6 my-4 text-decoration-none" %>
+      </div>
+    </div>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
