--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,6 +4,7 @@
     <div class="card text-center pt-5">
       <%= image_tag 'logo.png', class: "card-img-top" %>
       <div class="card-body">
+        <p>Sign Up</p>
         <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
           <%= render "devise/shared/error_messages", resource: resource %>
           <div class="mb-3 mt-4">
