--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,42 +1,38 @@
-<div class="container home-section d-flex flex-row justify-content-center align-items-center">
-  <div class="login-section pt-3">
+<div class="container">
+  <div class="row text-center pt-5">
+    <div class="col-md-4 offset-md-4">
+      <%= image_tag 'logo.png' %>
+      <h4 class="my-5">Sign Up</h4>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), :html => {:class => "form-style-2"}) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
+        <div class="mb-3 mt-4">
+          <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control", placeholder: "Phone number or email" %>
+        </div>
+        <div class="mb-3 mt-4">
+          <%= f.text_field :full_name, autofocus: true, autocomplete: "full_name", class: "form-control", placeholder: "Full name" %>
+        </div>
+        <div class="mb-3 mt-4">
+          <%= f.text_field :username, autofocus: true, autocomplete: "username", class: "form-control", placeholder: "Username" %>
+        </div>
+        <div class="mb-3">
+          <%= f.password_field :password, autocomplete: "new-password", class: "form-control", placeholder: "Password" %>
+        </div>
+        <div class="mb-3">
+          <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control", placeholder: "Confirm password" %>
+        </div>
+        <%= f.button "Sign Up", class: "button button-gray button-md button-radius" %>
+      <% end %>
 
-    <div class="card text-center pt-5">
-      <%= image_tag 'logo.png', class: "card-img-top" %>
-      <div class="card-body">
-        <p>Sign Up</p>
-        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-          <%= render "devise/shared/error_messages", resource: resource %>
-          <div class="mb-3 mt-4">
-            <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control", placeholder: "Phone number or email" %>
-          </div>
-          <div class="mb-3 mt-4">
-            <%= f.text_field :full_name, autofocus: true, autocomplete: "full_name", class: "form-control", placeholder: "Full name" %>
-          </div>
-          <div class="mb-3 mt-4">
-            <%= f.text_field :username, autofocus: true, autocomplete: "username", class: "form-control", placeholder: "Username" %>
-          </div>
-          <div class="mb-3">
-            <%= f.password_field :password, autocomplete: "new-password", class: "form-control", placeholder: "Password" %>
-          </div>
-          <div class="mb-3">
-            <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control", placeholder: "Confirm password" %>
-          </div>
-          <%= f.button "Sign Up", class: "btn btn-primary d-block w-100" %>
-        <% end %>
+      <% if notice %>
+        <p class="notice"><%= notice %></p>
+      <% elsif alert %>
+        <p class="alert"><%= alert %></p>
+      <% end %>
 
-        <% if notice %>
-          <p class="notice"><%= notice %></p>
-        <% elsif alert %>
-          <p class="alert"><%= alert %></p>
-        <% end %>
-      </div>
-    </div>
-
-    <div class="card text-center py-2 mt-3">
-      <div class="card-text">
+      <p class="mt-4">
         <%= link_to "Forgotten password?", new_user_password_path, class: "fs-6 my-4 text-decoration-none" %>
-      </div>
+      </p>
     </div>
+
   </div>
 </div>
