--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,13 +1,4 @@
 <div class="container home-section d-flex justify-content-center align-items-center">
-  <h1>Homepage</h1>
+  <%= image_tag 'logo.png' %>
 </div>
-<div class="container d-flex justify-content-center align-items-center">
-  <p>
-  <% if current_user %>
-    <%= button_to "Sign Out", destroy_user_session_path, method: :delete, class: "btn btn-primary" %>
-  <% else %>
-    <%= link_to "Sign in", new_user_session_path, class: "btn btn-primary" %>
-  <% end %>
 
-  </p>
-</div>
