Initial posts layouts

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -2,7 +2,6 @@
   <% if post.errors.any? %>
     <div style="color: red">
       <h2><%= pluralize(post.errors.count, "error") %> prohibited this post from being saved:</h2>
-
       <ul>
         <% post.errors.each do |error| %>
           <li><%= error.full_message %></li>
@@ -12,26 +11,25 @@
   <% end %>
 
   <div>
-    <%= form.label :caption, style: "display: block" %>
-    <%= form.text_field :caption %>
+    <%= form.text_area :caption, placeholder: "Enter your post" %>
   </div>
 
-  <div>
-    <%= form.label :allow_comments, style: "display: block" %>
-    <%= form.check_box :allow_comments %>
+  <div class="form-check">
+    <%= form.check_box :allow_comments, class: "form-check-input" %>
+    <%= form.label :allow_comments, class: "form-check-label" %>
   </div>
 
-  <div>
-    <%= form.label :show_likes_count, style: "display: block" %>
-    <%= form.check_box :show_likes_count %>
+  <div class="form-check">
+    <%= form.check_box :show_likes_count, class: "form-check-input" %>
+    <%= form.label :show_likes_count, class: "form-check-label"  %>
   </div>
 
-  <div>
+  <div class="mt-4">
     <%= form.label :images, style: "display: block" %>
     <%= form.file_field :images, multiple: true %>
   </div>
 
   <div>
-    <%= form.submit %>
+    <%= form.submit class: "button button-gray button-md button-radius" %>
   </div>
 <% end %>
