--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,29 +1,26 @@
-<div id="<%= dom_id post %>">
-  <p>
-    <strong>Caption:</strong>
-    <%= post.caption %>
-  </p>
-
-  <p>
-    <strong>User:</strong>
-    <%= post.user_id %>
-  </p>
-
-  <p>
-    <strong>Allow comments:</strong>
-    <%= post.allow_comments %>
-  </p>
-
-  <p>
-    <strong>Show likes count:</strong>
-    <%= post.show_likes_count %>
-  </p>
-
-  <p>
-    <strong>Images:</strong>
-    <% post.images.each do |image| %>
-      <div><%= image_tag image %></div>
-    <% end %>
-  </p>
-
+<div class="mb-5" id="<%= dom_id post %>">
+  <div class="img-link-box">
+    <a href="#">
+      <% post.images.each do |image| %>
+        <%= image_tag image %>
+      <% end %>
+    </a>
+  </div>
+  <div class="mt-4 text-start">
+    <div class="d-flex justify-content-between mb-2">
+      <div class="d-inline-flex">
+        <a class="font-family-tertiary font-small fw-medium uppercase" href="#">Tips &amp; Tricks</a>
+      </div>
+      <div class="d-inline-flex">
+        <span class="font-small"><%= post.created_at %></span>
+      </div>
+    </div>
+    <h4><a class="text-link-1" href="#">How to take good pictures</a></h4>
+    <p><%= post.caption %></p>
+    <p>Likes: <%= post.show_likes_count %></p>
+    <div class="mt-3">
+      <a class="button-text-1" href="#">Read More</a>
+    </div>
+  </div>
 </div>
+
