--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,14 +1,20 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Posts</h1>
+<div class="container">
+  <div class="row pt-5">
+    <div class="col-md-8 offset-md-2">
+      <h1>Posts</h1>
 
-<div id="posts">
-  <% @posts.each do |post| %>
-    <%= render post %>
-    <p>
-      <%= link_to "Show this post", post %>
-    </p>
-  <% end %>
+      <div id="posts">
+        <% @posts.each do |post| %>
+          <%= render post %>
+          <p>
+            <%= link_to "Show this post", post %>
+          </p>
+        <% end %>
+      </div>
+
+      <%= link_to "New post", new_post_path %>
+    </div>
+  </div>
 </div>
-
-<%= link_to "New post", new_post_path %>
