--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,9 +1,10 @@
-<h1>New post</h1>
+<div class="container">
+  <div class="row pt-5">
+    <div class="col-md-8 offset-md-2">
+      <h4 class="my-5 text-center">Create post</h4>
 
-<%= render "form", post: @post %>
+      <%= render "form", post: @post %>
 
-<br>
-
-<div>
-  <%= link_to "Back to posts", posts_path %>
+    </div>
+  </div>
 </div>
