--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,10 +1,16 @@
 <p style="color: green"><%= notice %></p>
 
-<%= render @post %>
+<div class="container">
+  <div class="row pt-5">
+    <div class="col-md-8 offset-md-2">
+      <%= render @post %>
 
-<div>
-  <%= link_to "Edit this post", edit_post_path(@post) %> |
-  <%= link_to "Back to posts", posts_path %>
+      <div>
+        <%= link_to "Edit this post", edit_post_path(@post) %> |
+        <%= link_to "Back to posts", posts_path %>
 
-  <%= button_to "Destroy this post", @post, method: :delete %>
+        <%= button_to "Destroy this post", @post, method: :delete %>
+      </div>
+    </div>
+  </div>
 </div>
