--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -1,4 +1,4 @@
-<div class="header header-lg right border-bottom">
+<div class="header header-lg right border-bottom sticky-top">
   <div class="container-fluid">
     <div class="header-logo">
       <h3><%= link_to "Railsgram", root_path %></h3>
