--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,26 +1,42 @@
-<div class="mb-5" id="<%= dom_id post %>">
-  <div class="img-link-box">
-    <a href="#">
-      <% post.images.each do |image| %>
-        <%= image_tag image %>
+<div class="my-5" id="<%= dom_id post %>">
+
+  <div id="carouselIndicators-<%= dom_id post %>" class="carousel slide carousel-fade carousel-dark" data-bs-ride="false">
+    <div class="carousel-indicators">
+
+      <% post.images.each_with_index do |image, index| %>
+        <button type="button" data-bs-target="#carouselIndicators-<%= dom_id post %>" data-bs-slide-to="<%= index %>" class="<%= 'active' if index == 0 %>"></button>
       <% end %>
-    </a>
+
+    </div>
+    <div class="carousel-inner">
+      <% post.images.each_with_index do |image, index| %>
+        <div class="carousel-item <%= 'active' if index == 0 %>">
+          <%= image_tag image, class: "d-block w-100" %>
+        </div>
+      <% end %>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators-<%= dom_id post %>" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselIndicators-<%= dom_id post %>" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
   </div>
+
   <div class="mt-4 text-start">
     <div class="d-flex justify-content-between mb-2">
       <div class="d-inline-flex">
-        <a class="font-family-tertiary font-small fw-medium uppercase" href="#">Tips &amp; Tricks</a>
+        <span class="font-family-tertiary font-small fw-bold" href="#">Tips &amp; Tricks</span>
       </div>
       <div class="d-inline-flex">
-        <span class="font-small"><%= post.created_at %></span>
+        <span class="font-family-tertiary font-small fw-bold"><%= formatted_date_with_suffix(post.created_at) %></span>
       </div>
     </div>
     <h4><a class="text-link-1" href="#">How to take good pictures</a></h4>
     <p><%= post.caption %></p>
     <p>Likes: <%= post.show_likes_count %></p>
-    <div class="mt-3">
-      <a class="button-text-1" href="#">Read More</a>
-    </div>
   </div>
 </div>
 
